Quick patch to sqlchild (replaced strnlen with strlen).
Fix for bug #1321731.  Masc should follow fasa
rules now, when masc fails it destroys both
hips (all four if in a quad) and sets the max
speed to 0.  This should fix any weird ness that
was occuring when the mech took another leg crit.

git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@175 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -86,7 +86,10 @@ btonline-btechmux 0.5:
 	* btsetpartcost() corrected negative cost error check. (George Ponick)
 	* btdamagemech() total damage limited to 1000 to prevent runaway loop. (George Ponick)
 	* Fixed bttechlist() to prevent that FUSTAG bug. (Greg Taylor)
-
+	* Fix for bug #1321731.  Masc code more in line with FASA
+	  now and should destroy all the hips as well as
+	  set the max speed to zero, fixing any weirdness
+	  that was occuring when the unit took another leg crit.
 
 btonline-btechmux 0.4:
 	- Changes
