Added Exile's emits (to MechDebugInfo) for picking up and dropping off units.  Also cleaned up some of the code.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@182 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -76,6 +76,8 @@ btonline-btechmux 0.5:
 	- Merge
 	* Added Exile's mine trigger stuff which seperates the
 	  Trigger mine and makes it more usable. (Dany)
+	* Added Exile's emits (to MechDebugInfo) for picking up
+	  and dropping off units. (Dany)
 
 	- Bugfixes
 	* Can no longer hide while OOD'ing (Greg Taylor)
