Added Exile's Waterproof tech with a slight change.
It now affects all units except vtols, aeros and DSs.
Before only affected tanks.  It negates any affects
of water on the unit (although will still slow the
unit down).

git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@183 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -78,6 +78,10 @@ btonline-btechmux 0.5:
 	  Trigger mine and makes it more usable. (Dany)
 	* Added Exile's emits (to MechDebugInfo) for picking up
 	  and dropping off units. (Dany)
+	* Added Exile's Waterproof_Tech but it works on all units
+	  except for aeros, vtols and DSes.  Basicly negates any
+	  rolls or affects that water has on a unit although
+	  the units will still slow down in water. (Dany)
 
 	- Bugfixes
 	* Can no longer hide while OOD'ing (Greg Taylor)
