Patch to keep exploding mechs from crashing the MUX when they're not on a map.
Also changed tacheight to tacsize.

git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@203 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -84,6 +84,7 @@ btonline-btechmux 0.5:
 	  the units will still slow down in water. (Dany)
 	* Added Coolant Guns. (Dany)
 	* Added 'vector' command. (Power_Shaper)
+	* Changed tacheight to tacsize. (Dany)
 
 	- Bugfixes
 	* Can no longer hide while OOD'ing (Greg Taylor)
@@ -110,6 +111,8 @@ btonline-btechmux 0.5:
 	  with it. (Dany)
 	* Movement mode contact flags now appear as intended. (Power_Shaper)
 	* Maneuvering ace now gets the proper turning bonus. (John FitzSimons)
+	* Patch to keep exploding units that aren't on maps
+	  from crashing the MUX. (Dany)
 
 btonline-btechmux 0.4:
 	- Changes
