Rename 'phys_use_pskill' to 'btech_phys_use_pskill' to follow bt config directive scheme.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@205 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -77,6 +77,8 @@ btonline-btechmux 0.5:
 	* There is now a config directive, 'btech_seismic_see_stopped',
 	  that determines whether seismic picks up stopped units.
 	  Default to off (0). (Power_Shaper)
+	* Renamed 'phys_use_pskill' to 'btech_use_pskill' to fit in
+	  with the rest of the config directives.
 
 	- Merge
 	* Added Exile's mine trigger stuff which seperates the
