Updating instructions for rc release.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@207 e60b412a-5d77-420b-80c2-6cef64185626

--- a/INSTALL
+++ b/INSTALL
@@ -1,39 +1,30 @@
 Btech-Online BattletechMUX v0.x Beta
 ------------------------------------       
-_______________________________________
+________________________________________
 =              Contents                =
 ========================================
 * S1: Build Dependencies               *
 * S2: Obtaining the Needed Modules     *
-* S3: BTMux Directory Structure        *
-* S4: Compiling and Running the Source *
-* S5: Compile-Time Directives          *
-* S6: Game Configuration File          *
-* S7: Starting and Connecting          *
-* S8: Getting Further help             *
+* S2: Obtaining BTMux                  *
+* S3: Compiling and Running the Source *
+* S4: Compile-Time Directives          *
+* S5: Game Configuration File          *
+* S6: Starting and Connecting          *
+* S7: Getting Further help             *
 ========================================
 
-S1: BUILD DEPENDENCIES
-----------------------
-Before you even attempt to compile the source, you'll need to make sure that
-your machine has the following packages installed:
+ S1: BUILD DEPENDENCIES
+ ----------------------
+ Before you even attempt to compile the source, you'll need to make sure that
+ your machine has the following packages installed:
 
-* crypt (libcrypt/lcrypt)
-* libevent (http://www.monkey.org/~provos/libevent/)
-* libdbi (If SQL support is enabled)
-* autoconf
+ * crypt (libcrypt/lcrypt)
+ * libevent (http://www.monkey.org/~provos/libevent/)
+ * libdbi (If SQL support is enabled)
+ * autoconf
 
- S2: OBTAINING THE NEEDED MODULES
- --------------------------------
- BattletechMUX comes in a set of modules that allow for certain chunks of the
- structure to be updated or inter-changed with other alternative versions.
- This is markedly different from the older versions of BTMux where everything
- came in one package.
-
- The first thing you need to get is the actual BTMux source. This serves as
- the root directory for the entire tree and is where you bring in the
- modules that you download. 
-
+ S2: OBTAINING BTMUX
+ -------------------
  You have two methods of obtaining the BTMux source: 
  * Subversion
  * SourceForge Files Page
@@ -53,7 +44,7 @@ your machine has the following packages installed:
  Head on over to the btonline-btmux project's
  Files section at:
  
- http://sourceforge.net/project/showfiles.php?group_id=128056
+ http://files.btmux.com
  
  First download a version of the source. This is under the Btech-Online BTMux
  package. Select the version you'd like (usually the latest) and download
@@ -64,126 +55,102 @@ your machine has the following packages installed:
  Make sure to replace the 'x' with the proper version number. This will leave
  you with a btonline-btechmux directory. We'll call this your BTMux root dir.
 
- Next you'll want to download a game directory. If you are new to running
- BTMuxs, it is strongly recommended you get the BattletechMUX in a Box
- game dir. This contains a lot of BTMux systems pre-built so you can get
- right to working on the fun stuff. Download it and extract it like before
- but make sure you're in the directory the BTMux root dir occupies (not
- from within the actual BTMux root dir).
+ This will leave you with a ready-to-compile game, proceed to the next
+ section.
 
- You will then want to download a Map, Mech, and Text directory. If you
- don't know which one to get, stick with the standard ones. Extract all
- of these just like you did with the source and make sure to do it from
- the same directory.
+ S3: COMPILING AND RUNNING THE SOURCE
+ ------------------------------------
+ To compile the Battletech MUX source, 'cd' into your root BTMux dir and type
+ './configure'. If you downloaded the Subversion trunk, you'll need to do
+ a 'make -f Makefile.dist' prior to that.
 
-S3: BTMUX DIRECTORY STRUCTURE
------------------------------
-You should now have a full BTMux tree filled out. Here is what the structure
-of a BTMux looks like as far as the modules you downloaded go:
+ NOTE: If you'd like to change the default configuration values, issue a
+ './configure --help' to see the various features that may be enabled or
+ disabled. More about this in Section 5. When you've got your configuration
+ how you like it, proceed with compiling the source by typing './configure'
+ followed by any flags you need, then 'make install'.
 
-btonline-btechmux
-|- src
-|- game
-  |- maps
-  |- mechs
-  |- text
+ Make sure that you already have a /game directory present or the binaries
+ won't be moved and you will not have a working game. See Sections 1 and 2
+ for details on setting your game directory up. In general, 'make install'
+ will pull the latest version of everything you need as long as you
+ have Subversion installed.
 
-Note that there are a lot more directories and files than those listed above
-but that's where each of the modules belong.
+ To run the example database, cd into the /game.run directory after running
+ 'make install', and run './Startmux'. Also see the README in the 'game'
+ directory.
 
-S4: COMPILING AND RUNNING THE SOURCE
-------------------------------------
-To compile the Battletech MUX source, 'cd' into your root BTMux dir and type
-'make -f Makefile.dist'. This will generate a configure script and run it
-with the defaults.
+ A quick note on the 'game' directory: For those of you who have used
+ older versions of BTMux source, the /game directory is not where the
+ actual game directory you want to run is. When you 'make install',
+ the script checks to see if there is a /game.run present. If there
+ isn't, it copies /game to /game.run. This is done so you have a template
+ (/game) and a working copy (/game.run). Once you have a /game.run, you
+ may safely delete /game if you so wish.
 
-NOTE: If you'd like to change the default configuration values, issue a
-'./configure --help' to see the various features that may be enabled or
-disabled. More about this in Section 5. When you've got your configuration
-how you like it, proceed with compiling the source by typing './configure'
-followed by any flags you need, then 'make install'.
+ S4: COMPILE-TIME DIRECTIVES
+ ---------------------------
+ There are a number of compile-time directives available for you to further
+ customize your game to your tastes. You may view these at:
 
-Make sure that you already have a /game directory present or the binaries
-won't be moved and you will not have a working game. See Sections 1 and 2
-for details on setting your game directory up. In general, 'make install'
-will pull the latest version of everything you need as long as you
-have Subversion installed.
+ http://docs.btmux.com/index.php/Compile_Time_Options
 
-To run the example database, cd into the /game.run directory after running
-'make install', and run './Startmux'. Also see the README in the 'game'
-directory.
+ You may set these by issuing a './configure' with the needed flags. See
+ './configure --help' for an up-to-date list.
 
-A quick note on the 'game' directory: For those of you who have used
-older versions of BTMux source, the /game directory is not where the
-actual game directory you want to run is. When you 'make install',
-the script checks to see if there is a /game.run present. If there
-isn't, it copies /game to /game.run. This is done so you have a template
-(/game) and a working copy (/game.run). Once you have a /game.run, you
-may safely delete /game if you so wish.
+ Most of these require a 'make clean' before re-compiling. Some may also
+ require a hcode.db rebuild which means you'll need to remove your
+ /game/hcode.db file and setup all of your xcode objects again.
 
-S5: COMPILE-TIME DIRECTIVES
----------------------------
-There are a number of compile-time directives available for you to further
-customize your game to your tastes. You may view these at:
+ S5: GAME CONFIGURATION FILE
+ ---------------------------
+ If you look under /game.run, you'll see some file with a .conf extension.
+ This is generally netmux.conf if you are using BTMux in a Box. You'll 
+ need to look through this file and change whichever options you want. 
+ Most importantly, change the 'port' config directive as you will most 
+ likely want to choose something unique. Documentation on config 
+ directives may be found at:
 
-http://docs.btmux.com/index.php/Compile_Time_Options
+ http://docs.btmux.com/index.php/Config_Directives
 
-You may set these by issuing a './configure' with the needed flags. See
-'./configure --help' for an up-to-date list.
+ Note that you'll need to do a @restart for most of these config
+ directives to take effect. You may use the @admin command with your
+ #1 character to do most of these but anything set by @admin won't
+ be saved across restarts unless it's also in your <gamename>.conf
+ file.
 
-Most of these require a 'make clean' before re-compiling. Some may also
-require a hcode.db rebuild which means you'll need to remove your
-/game/hcode.db file and setup all of your xcode objects again.
+ S6: STARTING AND CONNECTING TO YOUR GAME
+ ----------------------------------------
+ Once your game is compiled and your game.run directory is populated,
+ cd to game.run and type:
 
-S6: GAME CONFIGURATION FILE
----------------------------
-If you look under /game.run, you'll see some file with a .conf extension.
-This is generally netmux.conf if you are using BTMux in a Box. You'll 
-need to look through this file and change whichever options you want. 
-Most importantly, change the 'port' config directive as you will most 
-likely want to choose something unique. Documentation on config 
-directives may be found at:
+ ./Startmux &
 
-http://docs.btmux.com/index.php/Config_Directives
+ This will kick off your MUX. You should see 'netmux' and a few other
+ processes related to the game under the Linux/Unix command, 'ps'.
+ Try connecting to the port you specified in netmux.conf and see if
+ you are greeted with a connection screen.
 
-Note that you'll need to do a @restart for most of these config
-directives to take effect. You may use the @admin command with your
-#1 character to do most of these but anything set by @admin won't
-be saved across restarts unless it's also in your <gamename>.conf
-file.
+ IMPORTANT: The default wiz characters both have the same password:
 
-S7: STARTING AND CONNECTING TO YOUR GAME
-----------------------------------------
-Once your game is compiled and your game.run directory is populated,
-cd to game.run and type:
+ btmuxr0x
 
-./Startmux &
+ You may connect with the #1 character (The god character, only use
+ it when you have to change config directives or @set other players
+ WIZARD) and the #2 character (Your new head wiz character). 
 
-This will kick off your MUX. You should see 'netmux' and a few other
-processes related to the game under the Linux/Unix command, 'ps'.
-Try connecting to the port you specified in netmux.conf and see if
-you are greeted with a connection screen.
+ You may connect using the two character's dbref like this:
 
-IMPORTANT: The default wiz characters both have the same password:
+ connect #1 btmuxr0x
 
-btmuxr0x
+ Note that the same password is used for both #1 and #2, you will
+ need to change these using the @password command as soon as
+ possible! 
 
-You may connect with the #1 character (The god character, only use
-it when you have to change config directives or @set other players
-WIZARD) and the #2 character (Your new head wiz character). 
+ You should now be set to start tinkering! Good luck :)
 
-You may connect using the two character's dbref like this:
-
-connect #1 btmuxr0x
-
-Note that the same password is used for both #1 and #2, you will
-need to change these using the @password command as soon as
-possible! 
-
-You should now be set to start tinkering! Good luck :)
-
-S8: GETTING FURTHER HELP
-------------------------
-For more information on the support available to you, check out the
-SUPPORT file included in your root BTMux directory. This lists
-all of the resources available.
+ S7: GETTING FURTHER HELP
+ ------------------------
+ For more information on the support available to you, check out the
+ SUPPORT file included in your root BTMux directory. This lists
+ all of the resources available.
