Patch to keep units set critproof from getting crits.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@213 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -120,6 +120,7 @@ btonline-btechmux 0.6:
 	* Maneuvering ace now gets the proper turning bonus. (John FitzSimons)
 	* Patch to keep exploding units that aren't on maps
 	  from crashing the MUX. (Dany)
+	* Patch to keep units set CritProof_Tech from getting crits. (Dany)
 
 btonline-btechmux 0.4:
 	- Changes
