Committing Power_Shaper's patch to make defensive weapons emit the correct error message if a player tries to fire one that is destroyed.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@214 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -121,6 +121,8 @@ btonline-btechmux 0.6:
 	* Patch to keep exploding units that aren't on maps
 	  from crashing the MUX. (Dany)
 	* Patch to keep units set CritProof_Tech from getting crits. (Dany)
+	* Destroyed defensive weapons now emit proper error when player
+	  attempts to fire them (Power_Shaper)
 
 btonline-btechmux 0.4:
 	- Changes
