Removed the following funcs: btaddparts(), btgetreftech(), btgetreftech_ref() in favor of the equivalents. btaddstores(), bttechlist(), bttechlist_ref().
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@232 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -79,6 +79,9 @@ btonline-btechmux 0.6:
 	  Default to off (0). (Power_Shaper)
 	* Renamed 'phys_use_pskill' to 'btech_use_pskill' to fit in
 	  with the rest of the config directives.
+	* Removed functions: btgetreftech(), btgetreftech_ref(),
+	  btaddparts(). Use their existing equivalents:
+	  btaddstores(), bttechlist(), bttechlist_ref(). (Greg)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
