Removed EXTENDED_ADVANTAGES #ifdefs. Same reason as the last two commits, admins can choose or not to use them by not setting them on players.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@238 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -94,6 +94,9 @@ btonline-btechmux 0.6:
 	  admins don't want targcomp modes, they can refrain
 	  from setting targcomp to values other than 0 on
 	  units. (Greg)
+	* Removed EXTENDED_ADVANTAGES define for much the same
+	  reason as the last two. If admins don't want to use
+	  the feature, don't add the advantages to players. (Greg)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
