Fix to allow compiling with --disable-bt-movement-modes. Basically we just leave the movement mode #defines for the movement types in and the functions to set/unset them, but keep the #ifdef in glue.h to prevent players from actually using the movement modes. On a side-note, the Shutdown() macro is very gay.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@240 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -152,6 +152,8 @@ btonline-btechmux 0.6:
 	  and no longer under the complex repairs ifdef. They need to be
 	  implemented though. As a result, carrier tech will not show
 	  up as xl_gyro tech when complex_repairs is enabled. (Greg)
+	* It is now possible to compile with --disable-bt-movement-modes.
+	  (Greg)
 
 btonline-btechmux 0.4:
 	- Changes
