Units with movetype == NONE no longer fall from the air when shutdown. This is primarily useful for radiotowers and other misc. mapstuff.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@241 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -154,6 +154,8 @@ btonline-btechmux 0.6:
 	  up as xl_gyro tech when complex_repairs is enabled. (Greg)
 	* It is now possible to compile with --disable-bt-movement-modes.
 	  (Greg)
+	* Units with movetype NONE no longer fall from the sky when shutdown
+	  while floating above ground level in the air. (Greg)
 
 btonline-btechmux 0.4:
 	- Changes
