Rocket Launchers should now be completely implemented and ready to go. The only thing that might need looking over is the reload code, but this should be fine if One-Shot reloading is fine.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@243 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -101,6 +101,7 @@ btonline-btechmux 0.6:
 	  addweap <weap> <loc> <crit> o. Rewrite the addweap
 	  function to be much more expandable and a lot less
 	  hacked. (Greg)
+	* RocketLaunchers are now completely implemented. (Greg)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
