Changes to require spotter for IDF's. Use btech_idf_requires_spotter to modify to old rules. This is the default behavior now. Also made it so spotters could not fire (as per old rules)
Power_Shaper

git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@253 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -120,6 +120,8 @@ btonline-btechmux 0.6:
 	  mudconf parameter 'btech_exile_stun_code'. (Dany)
 	* Finished hooking Maneuvering Ace to turnmodes. (Power_Shaper)
         * Added Exile's Observer channel code with coloring (Power_Shaper)
+        * Added btech_idf_requies_spotter defaulting to 1 for
+          idf Spotting requirements (Power_Shaper)
 
 	- Bugfixes
 	* Fixed mistiming in weapon recycling code. (Martin Murray)
