Related ChangeLog update from r264
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@265 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -102,6 +102,7 @@ btonline-btechmux 0.6:
 	  function to be much more expandable and a lot less
 	  hacked. (Greg)
 	* RocketLaunchers are now completely implemented. (Greg)
+        * VTOLs with ICE set crash/explosion hex ablaze (Power_Shaper)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
