Added logic to prevent exploding reactor/ammo when sections/weapons are recycling.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@273 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -104,6 +104,8 @@ btonline-btechmux 0.6:
 	* RocketLaunchers are now completely implemented. (Greg)
         * VTOLs with ICE set crash/explosion hex ablaze (Power_Shaper)
         * Added btech_vtol_ice_causes_fire for VTOLs with ICE (Power_Shaper)
+        * Explode reactor/ammo requires weapons/section to not be busy 
+          (Power_Shaper)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
