Added stinger mode for LRMs as well as STINGER <weap> command. Ammo type is 'T' not 'Z' like it was before. 'Z' is Nemesis NARC apparently.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@274 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -106,6 +106,8 @@ btonline-btechmux 0.6:
         * Added btech_vtol_ice_causes_fire for VTOLs with ICE (Power_Shaper)
         * Explode reactor/ammo requires weapons/section to not be busy 
           (Power_Shaper)
+        * Added STINGER ammotype and related affects. Ammo code is 'T' 
+          (Power_Shaper)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
