--- a/ChangeLog
+++ b/ChangeLog
@@ -125,9 +125,10 @@ btonline-btechmux 0.6:
 	* Added Exile's head hit stun code.  Can be turned on/off using the
 	  mudconf parameter 'btech_exile_stun_code'. (Dany)
 	* Finished hooking Maneuvering Ace to turnmodes. (Power_Shaper)
-        * Added Exile's Observer channel code with coloring (Power_Shaper)
+        * Added Exile's Observer channel code with coloring. (Power_Shaper)
         * Added btech_idf_requies_spotter defaulting to 1 for
-          idf Spotting requirements (Power_Shaper)
+          idf Spotting requirements. (Power_Shaper)
+	* Ported Exile style orbital dropping. (Greg)
 
 	- Bugfixes
 	* Fixed mistiming in weapon recycling code. (Martin Murray)
