Battlesuits cannot fire after they swarm (until 30 ticks goes by) Same when they swarm - (lower tick time though)
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@295 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -170,6 +170,8 @@ btonline-btechmux 0.6:
 	  (Greg)
 	* Units with movetype NONE no longer fall from the sky when shutdown
 	  while floating above ground level in the air. (Greg)
+        * Bsuits could fire immediately after swarming/dismounting 
+          (Power_Shaper)
 
 btonline-btechmux 0.4:
 	- Changes
