Glancing blows added in by Alex Gowan
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@297 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -108,6 +108,9 @@ btonline-btechmux 0.6:
           (Power_Shaper)
         * Added STINGER ammotype and related affects. Ammo code is 'T' 
           (Power_Shaper)
+        * Formatting cleanup in mech.combat.c (Alex Gowan)
+        * Glancing Blows code (Alex Gowan)
+        * New Config Value -- btech_glancing_blows (Alex Gowan)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
