Display of ECM/Protected/Disturbed on 'contacts' should be more accurate now
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@300 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -115,6 +115,8 @@ btonline-btechmux 0.6:
           from firing (Power_Shaper)
         * COMBAT_SAFE units are no longer SWARM/SWARM1 targets 
           (Power_Shaper)
+        * Fixed display of ECM/Protected/Disturbed to be slightly more 
+          accurate (Power_Shaper)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
