By FASA rules, you cannot backup while Sprinting. Added the logic for doing speed -val in the speed command and in the sprint movement event to bring you to a stop when you do get into sprint.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@301 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -117,6 +117,7 @@ btonline-btechmux 0.6:
           (Power_Shaper)
         * Fixed display of ECM/Protected/Disturbed to be slightly more 
           accurate (Power_Shaper)
+        * Going reverse while sprinting is now prohibited (Power_Shaper)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
