One of these days, I'll remember to do the ChangeLog at the sametime.
ChangeLog updated for HD Gyros

git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@305 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -118,6 +118,7 @@ btonline-btechmux 0.6:
         * Fixed display of ECM/Protected/Disturbed to be slightly more 
           accurate (Power_Shaper)
         * Going reverse while sprinting is now prohibited (Power_Shaper)
+        * Hardened Gyros should have the proper crit effect (Power_Shaper)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
