TargComp/Long wasn't checking the proper range values. Should now get the proper mods (-1 for L, +1 for S) using this mode.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@310 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -183,6 +183,8 @@ btonline-btechmux 0.6:
 	  while floating above ground level in the air. (Greg)
         * Bsuits could fire immediately after swarming/dismounting 
           (Power_Shaper)
+        * TargComp wasn't looking at the proper range values. 
+          (Power_Shaper)
 
 btonline-btechmux 0.4:
 	- Changes
