Disallow jumping while OOD'ing to circumvent landing roll.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@322 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -185,6 +185,8 @@ btonline-btechmux 0.6:
           (Power_Shaper)
         * TargComp wasn't looking at the proper range values. 
           (Power_Shaper)
+	* Don't allow using jumpjets while orbital dropping. This was being
+	  used to circumvent the landing roll. (Greg)
 
 btonline-btechmux 0.4:
 	- Changes
