@list functions now separates hardcoded functions from softcoded ones (via @function).
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@352 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -121,6 +121,8 @@ btonline-btechmux 0.6:
         * Hardened Gyros should have the proper crit effect (Power_Shaper)
 	* @pcreate and @robot now show the dbref of the created player
           or robot (Greg)
+	* @list functions now has built-in and hardcoded functions
+	  separated (Greg)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
