Added startsecs() from MUX2
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@354 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -124,6 +124,7 @@ btonline-btechmux 0.6:
 	* @list functions now has built-in and hardcoded functions
 	  separated (Greg)
 	* Added connrecord() from MUX2 (Greg)
+	* Added startsecs() from MUX2 (Greg)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
