Disallowing players to drop prone while staggering to avoid the stagger rolls.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@358 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -193,6 +193,8 @@ btonline-btechmux 0.6:
           (Power_Shaper)
 	* Don't allow using jumpjets while orbital dropping. This was being
 	  used to circumvent the landing roll. (Greg)
+	* Don't allow dropping prone while staggering. Players were
+          circumventing stagger roles by doing this. (Greg)
 
 btonline-btechmux 0.4:
 	- Changes
