On second thought, proning while staggering adds a (staggerdamage/20)+ BTH to prone. This cumulates on top of running/walking BTH mods.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@359 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -193,8 +193,11 @@ btonline-btechmux 0.6:
           (Power_Shaper)
 	* Don't allow using jumpjets while orbital dropping. This was being
 	  used to circumvent the landing roll. (Greg)
-	* Don't allow dropping prone while staggering. Players were
-          circumventing stagger roles by doing this. (Greg)
+	* Proning while staggering is now somewhat de-munched. For
+	  every stagger level (stagger damage/20), +1 to prone BTH. This
+	  is cumulative if the unit is running/walking. The drop levels
+	  defaults to 1 but if running and staggering, go with the 2
+	  rather than increment it to 3. (Greg)
 
 btonline-btechmux 0.4:
 	- Changes
