You are now set a message when joining a channel much like you are for leaving it. This will especially help for when wizards are dark and receive no output from the command.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@360 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -125,6 +125,8 @@ btonline-btechmux 0.6:
 	  separated (Greg)
 	* Added connrecord() from MUX2 (Greg)
 	* Added startsecs() from MUX2 (Greg)
+	* Re-joining channels now sends 'You have joined channel <blah>'
+	  so dark wizzen don't get confused when quietly joining. (Greg)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
