If a location got flooded, the ammo in it became unfirable and undumpable, but still exploded if critted or overheated. Ammo destroyed by flooding is now set to 0 rounds in addition to disabling the slot. (Fitz)
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@390 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -203,6 +203,10 @@ btonline-btechmux 0.6:
 	* OBSERVATORIC units don't see the 'You notice blah blah' or
           'You have lost' LOS messages. These are redundant since they
           see all and can't lose LOS. (Greg)
+	* If a location got flooded, the ammo in it became unfirable
+          and undumpable, but still exploded if critted or overheated.
+          Ammo destroyed by flooding is now set to 0 rounds in addition
+          to disabling the slot. (Fitz)
 
 btonline-btechmux 0.4:
 	- Changes
