Stagger damage event is now 5 seconds long as opposed to 30. After a stagger roll is made, -10 is docked from the unit's staggerdamage count to assist in recovery. This reduction in stagger event time should be a little more playable than the sometimes 20 second delays we're seeing in stagger rolls right now. We may need to tweak the event time and try some different levels, but we'll start it here. (Fitz)
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@393 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -134,6 +134,10 @@ btonline-btechmux 0.6:
           details:
 	  http://sourceforge.net/tracker/index.php?func=detail&aid=1376850&group_id=128056&atid=711029
           Added the --bt-scaled-infrared and defaulted to on. (Fitz)
+	* Staggering is now considered on any damaged mech within 5 tics
+	  of initially being hit. After the roll is made, knock 10 off the
+	  unit's staggerdamage. Old interval was 30, little bit too
+	  delayed. (Fitz)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
