Ancient chargen code removed. This is best left softcoded. Requires hcode.db rebuild if you're running a game.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@395 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -138,6 +138,7 @@ btonline-btechmux 0.6:
 	  of initially being hit. After the roll is made, knock 10 off the
 	  unit's staggerdamage. Old interval was 30, little bit too
 	  delayed. (Fitz)
+	* CHARGEN XTYPE has been removed. (Greg)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
