--- a/ChangeLog
+++ b/ChangeLog
@@ -138,7 +138,7 @@ btonline-btechmux 0.6:
 	  of initially being hit. After the roll is made, knock 10 off the
 	  unit's staggerdamage. Old interval was 30, little bit too
 	  delayed. (Fitz)
-	* CHARGEN, SCEN (and related) XTYPES have been removed. (Greg)
+	* CHARGEN, SCEN (and related), CUSTOM XTYPES have been removed. (Greg)
 	* The 'maxcf' XCODE field on maps has been removed in favor of
 	  'cfmax'. (Greg)
 
