Near complete revamp of the physical code. NEEDS LOTS OF TESTING. This should be good to go. The only thing left is to allow punching vehicles in the same hex while prone (as per BMR). There was a lot of flawed/non-standard logic in here so the players may notice some different behavior in certain cases. I didn't touch charge/dfa yet. These are somewhat seperate from the rest of the attacks and while modularization is possible, it's more of a pain in the ass :) In any case, should be a lot easier to add those new physical weapons we're missing now.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@429 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -141,6 +141,11 @@ btonline-btechmux 0.6:
 	* CHARGEN, SCEN (and related), CUSTOM XTYPES have been removed. (Greg)
 	* The 'maxcf' XCODE field on maps has been removed in favor of
 	  'cfmax'. (Greg)
+	* Massive rewrite/restructure of mech.physical.c. Much improved logic
+	  and readability. (Greg)
+	* Disallow the direct physical attacking of bsuits as per FASA.
+	  Maxtech has damage absorption rules for attacking the swarmed unit
+	  but hitting the suit, these should be used instead. (Greg)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
