Added the Inferno Penalty per FASA Also added btech_inferno_penalty mudconf (default to 0)
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@458 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -158,6 +158,7 @@ btonline-btechmux 0.6:
 	  1 ton and 1 crit per 10 tons unit weight. 1 pt damage for every
 	  4 unit tons. (Greg)
         * Added the graball() function, the 'all' version of grab() (Power_Shaper)
+        * Added FASA Inferno Penalties for heat (Fitz + Power_Shaper)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
