Patch to fix issue were embarking units that were towing stuff weren't pulling the towed stuff into the carrier.  Patch supplied by Casy.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@460 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -246,6 +246,8 @@ btonline-btechmux 0.6:
           sensors. (Fitz)
 	* When a unit is in TSM mode it should get correct extra
 	  heat for the speed its currently at.
+	* Fix for embarking a carrier while towing a unit (wasn't pulling
+	  towed unit inside). (Casy)
 
 btonline-btechmux 0.4:
 	- Changes
