Hotloaded LRMs jam on a roll of 2 or 3.
Take that, LRM Boats!

git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@463 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -159,6 +159,7 @@ btonline-btechmux 0.6:
 	  4 unit tons. (Greg)
         * Added the graball() function, the 'all' version of grab() (Power_Shaper)
         * Added FASA Inferno Penalties for heat (Fitz + Power_Shaper)
+        * Hotloaded LRMs jam on roll of 2 or 3 (Power_Shaper)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
