Anything that isn't a mech/hover/sub goes glub glub on an OOD into the water, successful roll or not.
This is just like starting up in water.

git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@522 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -183,6 +183,7 @@ btonline-btechmux 0.6:
           idf Spotting requirements. (Power_Shaper)
 	* Ported Exile style orbital dropping. (Greg)
 	* Ported Exile's heatcutoff code. (Dany)
+        * Non Mech/Hover/Sub units drown when OOD'ing into water now. (Power_Shaper)
 
 	- Bugfixes
 	* Fixed mistiming in weapon recycling code. (Martin Murray)
