Suits must recycle weaponary before performing special attacks (swarm, attacklegs)
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@523 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -184,6 +184,7 @@ btonline-btechmux 0.6:
 	* Ported Exile style orbital dropping. (Greg)
 	* Ported Exile's heatcutoff code. (Dany)
         * Non Mech/Hover/Sub units drown when OOD'ing into water now. (Power_Shaper)
+	* Suits must recycle weaponary before special attacks. (Power_Shaper)
 
 	- Bugfixes
 	* Fixed mistiming in weapon recycling code. (Martin Murray)
