Converting aeros to AT2 sections and hit locations. The sections and hitlocs are ready to go, critting remains unfinished. Still need to add heat for aeros as well.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@676 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -185,6 +185,9 @@ btonline-btechmux 0.6:
 	* Ported Exile's heatcutoff code. (Dany)
         * Non Mech/Hover/Sub units drown when OOD'ing into water now. (Power_Shaper)
 	* Suits must recycle weaponary before special attacks. (Power_Shaper)
+	* Aeros now use AT2 locations. (Greg Taylor)
+	* Much needed ergonomic improvements to mechrep commands. (Greg
+	Taylor)
 
 	- Bugfixes
 	* Fixed mistiming in weapon recycling code. (Martin Murray)
