Allow us to 'savenew' when a template is overweight, but still emit a warning message. We'll leave it up to the admin to be smart enough to either heed or disregard said warning.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@686 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -169,6 +169,9 @@ btonline-btechmux 0.6:
 	* Units triggering trigger mines now have their AMINETRIGGER attribute
 	  triggered. This serves to make channel monitoring the MineTriggers
 	  channel obsolete and is much more efficient. (Greg Taylor)
+	* You only see a warning now when a template you're saving is
+	  overweight. We'll leave it up to the admins to be smart enough to
+	  heed or disregard it. (Greg Taylor)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
