Tetsuo's patch with lots of message grammar fixes.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@687 e60b412a-5d77-420b-80c2-6cef64185626

--- a/ChangeLog
+++ b/ChangeLog
@@ -263,6 +263,7 @@ btonline-btechmux 0.6:
 	  heat for the speed its currently at.
 	* Fix for embarking a carrier while towing a unit (wasn't pulling
 	  towed unit inside). (Casy)
+	* Corrected grammar for a number of messages. (Tetsuo Sormlaeng)
 
 btonline-btechmux 0.4:
 	- Changes
