Updating docs since we apparently no longer have a Makefile.dist. Please remember to update the documentation if you change any of the outlined procedures.
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@1085 e60b412a-5d77-420b-80c2-6cef64185626

--- a/INSTALL
+++ b/INSTALL
@@ -25,8 +25,7 @@ ________________________________________
  S2: COMPILING AND RUNNING THE SOURCE
  ------------------------------------
  To compile the Battletech MUX source, 'cd' into your root BTMux dir and type
- './configure'. If you downloaded the Subversion trunk, you'll need to do
- a 'make -f Makefile.dist' prior to that.
+ './configure'.
 
  NOTE: If you'd like to change the default configuration values, issue a
  './configure --help' to see the various features that may be enabled or
