Updating reference to COPYING file so there are no excuses to violate licensing (cough).
git-svn-id: svn://svn.code.sf.net/p/btonline-btech/code@1092 e60b412a-5d77-420b-80c2-6cef64185626

--- a/README
+++ b/README
@@ -29,7 +29,7 @@ which is located at http://docs.btmux.com
 To find out how to install this piece of software, see the INSTALL file. The
 rest of this README describes the history of the code, in rough outlines, as
 well as the rationale behind the license (which can be found in the file
-LICENSE)
+COPYING)
 
 Note that there are many resources available if you are in need of help or 
 would like to contribute to the community. You may view the SUPPORT file 
